     with the new functions ranges2annot() and ranges2genes().
   o Expression table is generated with CAGEr instead of loaded from a OSCTable.
   o "Level 1" expression table is in RangedSummarizedExperiment format.
     Most uses of the "libs" table is now done through colData(l1).
   o New vignette (plotAnnot) explaining the graphs produced by plotAnnot().

DEPRECATED FEATURES

   o Running loadMoiraiStats() without option (relying on PROCESSED_DATA
     to be present) now triggers a warning of deprecation.

OTHER CHANGES

   o hanabi() accepts a single vector or a matrix as input, which will be
     coerced in a data frame.
   o hanabiPlot() will coerce GROUP in a factor instead of making an error.
   o TPM() checks that no expression value is negative.
   o The smallCAGEqc Rmarkdown template now uses hanabi() everywhere.
   o mapStats() and therefore plotAnnot() will search for a "groups" column with
     or without a capital G.
   
BUG FIXES

   o plotAnnot()'s scope "mapping" distinguishes non-proper pairs instead of
     calling them duplicates.
   o Export the points.hanabi() function.

Changes in version 0.12.3

NEW FEATURES

   o Depends on the magrittr package.

BUG FIXES

   o loadMoiraiStats: Better handle the case of 96-sample runs.

Changes in version 0.12.2

NEW FEATURES

    o Added a "steps" scope in mapStats().
    o loadMoiraiStats creates a "cleaned" column when possible.

OTHER CHANGES

    o Reworded category names in the "qc" scope in mapStats().

Changes in version 0.12.1

NEW FEATURES

    o Added a "C1 CAGE" type to llPostProcess().

BUG FIXES

    o Properly import gdata::drop.levels() and vegan::rarefy().

OTHER CHANGES

    o Reduced output width to 100 in the Rmarkdown template.

Changes in version 0.12.0

NEW FEATURES

    o   Added the loadBED12 function to load CAGEscan fragment data,
        especially from multiple libraries processed separately.
    o   Added the erccSpikeConcentration function to retreive concentration